# WiggleGramStudio

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: macos.yml  windows.yml
docs/images/: social-preview.html
scripts/: link-ffmpeg.mjs  set-version.mjs  setup-ffmpeg-macos.mjs  setup-ffmpeg-windows.ps1
src/: App.tsx  backend.ts  geometry.test.ts  geometry.ts  i18n.ts  model.test.ts  model.ts  playback.test.ts  playback.ts  preview.ts  styles.css  update.test.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Controls.tsx  CropEditor.tsx  ImportStrip.tsx  PointEditor.tsx  PreviewPanel.tsx  components.test.tsx
